# finparse

./: README.md  pyproject.toml
docs/: cli.md  parsers.md
ledgerza/: __init__.py  categorizer.py  cleaner.py  cli.py  detector.py  normalizer.py  reporter.py  schema.py
ledgerza/parsers/: base.py  capitec.py  fnb.py
